# expense-tracker

./: .gitignore  README.md
autogenerated_data/: csv_generate.py
inc/: Expense.h  Group.h  Text.h  User.h  auto_generate.h  backend.h  frontend.h  get_input.h  printers.h  tasks.h
inc/Objects/: Expense.h  Group.h  User.h
inc/States/: State.h  States.h
inc/Tasks/: auto_generate.h  get_input.h  manage_user_group.h  print.h
src/: CMakeLists.txt  Expense.cpp  Group.cpp  Group.h  User.cpp  User.h  auto_generate.cpp  auto_generate.h  backend.cpp  backend.h  frontend.cpp  frontend.h  get_input.cpp  main.cpp  printers.cpp  printers.h  tasks.cpp
src/Objects/: CMakeLists.txt  Expense.cpp  Group.cpp  User.cpp
src/States/: CMakeLists.txt  State.cpp  States.cpp  autogenerated_file.csv
src/Tasks/: CMakeLists.txt  auto_generate.cpp  get_input.cpp  manage_user_group.cpp  print.cpp
